Update configuration files with minor changes and add some new features. ======================================================================== Changes include: -----------------
**sh cfg:**
- Updates to `.bash_aliases` for pacman-related commands
- Updates to `.shellrc` for Python path and script directories

**ruff.toml:**:
- Enabling auto-formatting of code examples in docstrings
- Updating settings for line length, indent width, and quote style

**Misc:**
- Changes to `.pacman-pkglist.txt`, removing and adding packages

--- a/.shellrc
+++ b/.shellrc
@@ -4,7 +4,7 @@ export EDITOR=micro
 export MICRO_TRUECOLOR=1
 
 export PYTHONPATH=$HOME/.ipython/profile_main/:$HOME/python/modules/:$HOME/python/scripts/:\
-$HOME/python/scripts/bashhelpers/:$HOME/python/scripts/bashhelpers/ColorizeOutput/:\
+$HOME/python/:$HOME/python/scripts/bashhelpers/:$HOME/python/scripts/bashhelpers/ColorizeOutput/:\
 $HOME/python/Projects/termllama/termllama/:$HOME/python/Projects/fsutils/:\
 $HOME/python/Projects/fsutils/fsutils:$HOME/python/libs/hwutils/hwutils/:\
 $HOME/python/Projects/hwutils:$HOME/python/Projects/hwutils/hwutils:\
