--- a/ruff.toml
+++ b/ruff.toml
@@ -31,14 +31,13 @@ exclude = [
     "*conda*"
 ]
 cache-dir = "~/.cache/ruff"
-# Same as Black.
 line-length = 100
 indent-width = 4
-# Enumerate all fixed violations.
-# fix-only = true
-# show-fixes = true
-# show-source = true
 target-version = "py312"
+# Dont respect gitignore. Lint ignored files as well
+respect-gitignore = false
+
+extend-include = ["*.ipynb"]
 
 [format]
 # Like Black, use double quotes for strings.
@@ -57,11 +56,7 @@ skip-magic-trailing-comma = false
 # # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
 
-# # Enable auto-formatting of code examples in docstrings. Markdown,
-# # reStructuredText code/literal blocks and doctests are all supported.
-# #
-# # This is currently disabled by default, but it is planned for this
-# # to be opt-out in the future.
+# Enable auto-formatting of code blokcs in docstrings. Supports Md, rST
 docstring-code-format = true
 
 # # Set the line length limit used when formatting code snippets in
@@ -72,29 +67,28 @@ docstring-code-format = true
 docstring-code-line-length = "dynamic"
 
 [lint]
-# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
-# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
-# McCabe complexity (`C901`) by default.
-select = ["E", "F", "W605", "W291", "W292", "N", "UP001", "UP032", "UP034", "PLE", "PLW", 'W', "B"]
-# "W391
-#  Avoid enforcing line-length violations (`E501`), explicit encoding
-ignore = ["E501", "E701", "E702", "N999", "N806"] #"D211", "D213"] #"W1514"]
+select = ["E", "F", "C", 'W', "B", "UP"] # "W605", "W291", "W292", "N", "UP001", "UP032", "UP034", "PLE", "PLW",
 
-# Allow fix for all enabled rules (when `--fix`) is provided.
-# fixable = ["ALL"]
-# unfixable = []
+ignore = ["E501", "N999", "N806"] #"D211", "D213", "W1514", "E701" E702]
+#   ---------------------------------------------------------------
+#   - E501: Line too long
+#   - E701: Multiple statements on one line
+#   - E702: Multiple lines ending with different indentation levels
+#   - C: Too complex
+#   ----------------------------------------------------------------
+#   - N999: Invalid name (no description)
+#   - N806: Name should be uppercase (deprecated)
+#   ----------------------------------------------------------------
+
+extend-fixable = ["B"]
+unfixable = ["F401"] # Disable fix for unused imports (`F401`).
 
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-# Like Black, use double quotes for strings.
-# extend-fixable = ["B"]
 
 # Comments starting with these tags will be ignored by commented-out code detection
 task-tags = ["TODO", "FIXME", "XXX", "- [ ]", "[ ]", "- [x]", "[x]", "NOTE"]
 
-
-
 [lint.extend-per-file-ignores]
-# Also ignore `E402` in all `__init__.py` files.
 "__init__.py" = ["E402"]
 
 [lint.flake8-annotations]
@@ -123,3 +117,25 @@ combine-as-imports = true
 
 [lint.pycodestyle]
 max-line-length = 100 # E501 reports lines that exceed the length of 100.
+# convention = "google"  # Accepts: "google", "numpy", or "pep257".
+
+
+# Lint Reference:
+# --------------
+# Pyflakes              (F)
+# Pycodestyle           (E, W)
+# Mccabe                (C90)
+# Isort                 (I)
+# Pep8-naming           (N)
+# Pydocstyle            (D)
+# Pyupgrade             (UP)
+# flake8-2020           (YTT)
+# flake8-annotations    (ANN)
+# flake8-async          (ASYNC)
+
+
+
+# Enumerate all fixed violations.
+# fix-only = true
+# show-fixes = true
+# show-source = true
