Update bash functions, p10k configuration, and package list. ------------------------------------------------------------- - Modified bash functions to include a new function called `cfg`. - Updated p10k configuration to change the color of the OS identifier. - Added new packages to the pacman package list, including `ant`, `docker`, `docker-compose`, `eigen`, `glew`, `hdf5`, `jdk-openjdk`, `lapacke`, `nlohmann-json`, `opencv-samples`, `openmpi`, `shotcut`, `speech-dispatcher`, and `vtk`. - Added a new startup script to the shell configuration.

--- a/.shellrc
+++ b/.shellrc
@@ -15,7 +15,8 @@ $HOME/.local/share/pipx/venvs/poetry/lib/python3.12/site-packages/
 
 export PATH=$HOME/.dotfiles/:$HOME/scripts/:$HOME/scripts/graphing/:\
 $HOME/scripts/git_scripts/:$HOME/.local/bin:$HOME/scripts/shutdown:\
-$HOME/scripts/startup:$HOME/scripts/logging/:$PATH:$PYTHONPATH
+$HOME/scripts/startup:$HOME/scripts/logging/:$HOME/Code/Workspace:\
+$PATH:$PYTHONPATH:
 
 # Git
 # ---
@@ -62,7 +63,6 @@ export MOZ_DISABLE_RDD_SANDBOX=1
 export OLLAMA_KEEP_ALIVE=30
 export OLLAMA_MODELS=/home/joona/.ollama/models/
 export OLLAMA_HOST=10.0.0.21:11434
-
 # Python
 # ------
 export USE_EMOJI=false # pipx
