Minor Modifications to *rc files ---------------------------------- .xbindkeysrc: - Commented out commands for screenshots to resolve hotkey conflict  	with spectacle. - Add formatting and styling to rich.markdown alias `md` - Extend aliases for quick cd into common dirs with `wcam-today` - Add `pylint` function as a temporary HACK for ruff format/lint 	until I figure out pre-commit cfg errors - Fixed .p10k aggressive pwd prompt trunication

--- a/.continueconfig.json
+++ b/.continueconfig.json
@@ -208,7 +208,11 @@
       },
       {
         "title": "Docstring",
-        "prompt": "Write a docstring for this code. Do not change anything about the code itself.",
+        "prompt": "Write a docstring for this code. Do not change anything about the code itself."
+      },
+      {
+        "title": "Comment",
+        "prompt": "Write comments for this code"
       },
       {
         "title": "Fix grammar",
