--- a/settings.json
+++ b/settings.json
@@ -980,7 +980,7 @@
   "remote.restoreForwardedPorts": false,
   "editor.find.autoFindInSelection": "multiline",
   "python.createEnvironment.contentButton": "show",
-  "diffEditor.renderSideBySide": false,
+  "diffEditor.renderSideBySide": true,
   "python.testing.autoTestDiscoverOnSaveEnabled": true,
   "workbench.editor.alwaysShowEditorActions": true,
   "zenMode.hideLineNumbers": false,
@@ -1018,7 +1018,6 @@
   "search.searchEditor.singleClickBehaviour": "peekDefinition",
   "terminal.integrated.suggest.enabled": true,
   "html.format.wrapLineLength": 100,
-  "diffEditor.hideUnchangedRegions.enabled": true,
   "python.analysis.autoImportCompletions": false,
   "editor.experimentalInlineEdit.fontFamily": "Fira Code",
   "scm.inputFontFamily": "Fira Code",
@@ -1033,6 +1032,7 @@
     "cprint",
     "ffprobe",
     "fourcc",
+    "fstuils",
     "fsutils",
     "imread",
     "imwrite",
