--- a/ruff.toml
+++ b/ruff.toml
@@ -72,7 +72,7 @@ docstring-code-format = true
 docstring-code-line-length = "dynamic"
 
 [lint]
-select = ["E", "F", "C", 'W', "B", "UP"] # "W605", "W291", "W292", "N", "UP001", "UP032", "UP034", "PLE", "PLW"
+select = ["E", "F", "C", 'W', "B", "UP", "D100", "D101","D107", "D104","D301","D401","D400","ANN201", "ANN206", "S103", "S105", "S108", "S112", "S110", "A", "EXE", "PIE", "RET", "SIM", "PLR", "PLW", "RUF"] # "W605", "W291", "W292", "N", "UP001", "UP032", "UP034", "PLE", "PLW"
 
 fixable = ['ALL']
 
@@ -87,7 +87,7 @@ ignore = ["E501", "N999", "N806"] #"D211", "D213", "W1514", "E701" E702]
 #   - N806: Name should be uppercase (deprecated)
 #   ----------------------------------------------------------------
 
-extend-fixable = ["B"]
+extend-fixable = ["B", "D400"]
 unfixable = ["F401"] # Disable fix for unused imports (`F401`).
 
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
